# cpsl2023-dr-for-cleaning-machines

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
DR_on_KEA_live/: config_experiment.json  main.py
DR_on_KEA_live/environment/: __init__.py  connection_KEA.json  env_DR_service.py  env_connection.py
DR_on_KEA_live/scenarios/: electricity_price_2111201_scaledTo5Min.csv  electricity_price_day_ahead_20220318.csv  electricity_price_test.csv
PLC project/: DR_on_KEA_live.xml
cooling experiment/: KEA_Experiments_beta_calculation.xlsx
data_logging/: LogVariablesExperiment.xlsx  datalogger.py
evaluation_script/: KEA_221118_controlExperiment1.csv  evaluation_script.py  exp_221118_000_01.csv
